# ChangeLog for media-gfx/gimp-lqr-plugin
# Copyright 2007-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Jan 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  gimp-lqr-plugin-0.4.0.2.ebuild:
  Added ~amd64.

  21 Jan 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  gimp-lqr-plugin-0.4.0.1.ebuild, gimp-lqr-plugin-0.4.0.2.ebuild:
  Fixed ${S}.

*gimp-lqr-plugin-0.4.0.2 (15 Jan 2008)

  15 Jan 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  +gimp-lqr-plugin-0.4.0.2.ebuild, +gimp-lqr-plugin-0.4.0.1.ebuild
  -gimp-lqr-plugin-0.4.0.ebuild, -gimp-lqr-plugin-0.3.0-r5.ebuild:
  Removed old version. Moved ${PN}-0.4.0 to ${PN}-0.4.0.1 and added new,
  bugfix release.

*gimp-lqr-plugin-0.4.0 (13 Jan 2008)

  13 Jan 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  +gimp-lqr-plugin-0.4.0.ebuild:
  Version bump.

  23 Dec 2007; Piotr Szymaniak <lazy_bum@o2.pl>
  -gimp-lqr-plugin-0.3.0.ebuild, gimp-lqr-plugin-0.3.0-r5.ebuild:
  Cleaned up -r5 and removed old ebuild.

*gimp-lqr-plugin-0.3.0-r5 (15 Nov 2007)

  15 Nov 2007; Piotr Szymaniak <lazy_bum@o2.pl>
  +gimp-lqr-plugin-0.3.0-r5.ebuild:
  Bugfix release.

*gimp-lqr-plugin-0.3.0 (19 Oct 2007)

  19 Oct 2007; Piotr Szymaniak <lazy_bum@o2.pl>
  +gimp-lqr-plugin-0.3.0.ebuild, -gimp-lqr-plugin-0.2.1.ebuild:
  Version bump.

*gimp-lqr-plugin-0.2.1 (07 Oct 2007)

  07 Oct 2007; Piotr Szymaniak <lazy_bum@o2.pl> +gimp-lqr-plugin-0.2.1.ebuild:
  New ebuild.