@@ -1,5 +1,3 @@
-DIST gimp-lqr-plugin-0.4.0-1.tar.gz 823798 RMD160 449164a7b6f880cb1694f7688416fbe07b8dc139 SHA1 01d833f4dd10a8480b25b694eb3ead79b77efb79 SHA256 6ce39bc226b8761aaeea990d39c3d03ff06733fc62881f2cc5a868acb424d87c
 DIST gimp-lqr-plugin-0.4.0-2.tar.gz 823816 RMD160 018c3020c55464b70eeb618fe0b27f19888e145e SHA1 0111182681fd49e25007f26a9f17a71ed1a64533 SHA256 a5046d65ba041af39ad5f2d7fbba9884b6c37cdbfb27535f257023dce7221d36
-EBUILD gimp-lqr-plugin-0.4.0.1.ebuild 626 RMD160 00938aae16ef2d15c395d6b8fd0c562c5e03a1f6 SHA1 d1d10c5deb868ecb0e8e6f8c8e9ae175ed1618c4 SHA256 047a32484addb4554faef8b91d124e2562d9fa101b3d4900e3234c785d48d470
-EBUILD gimp-lqr-plugin-0.4.0.2.ebuild 633 RMD160 67c7a374c43482be0b768fd9e815e714d02aed44 SHA1 9de05da74a1f2cf7a80921ad2fa9270c4cac4fc5 SHA256 e15d27b0c6cc15f631c0a0a15391fa8eca80ebc188a28f993516bceaf9d362e7
-MISC ChangeLog 1402 RMD160 f3f001c35dfad73285dff3e78610aee1a012d765 SHA1 dbd533ea05e80aaff6fb41765c5d84915d3ae197 SHA256 5b886d44424e3ca1ff9c5a71da84e5edb06eaee637d7f40ef9dfc2611f9bbc75
+EBUILD gimp-lqr-plugin-0.4.0.2.ebuild 664 RMD160 76272074dffaf0b2bd7de3d7d484dea34226d756 SHA1 14515bb6f839ad7f77a11f0aa14adbfec890bbb6 SHA256 9c3695e43e46ae6fe4dec7da6524f7605921f2990ce3204ff9e2776275f64b7d
+MISC ChangeLog 1550 RMD160 e27a97db96cc363405447692f87f658cd81ce85d SHA1 0cb51c2f7671b89b4f44c404b93e882c4e5a8263 SHA256 11a990fde71c1369cca07c840781e78b583286de0227e6eb02004ff2e3a4a080
