@@ -1,28 +1,0 @@
-# Copyright 2007-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-inherit versionator
-
-MY_PV="$(replace_version_separator 3 '-' ${PV})"
-
-DESCRIPTION="Content-aware resizing for the GIMP"
-HOMEPAGE="http://liquidrescale.wikidot.com/"
-SRC_URI="http://liquidrescale.wikidot.com/local--files/en:download-page/${PN}-${MY_PV}.tar.gz"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~x86"
-IUSE=""
-
-RDEPEND=">=media-gfx/gimp-2.3
-	media-libs/liblqr"
-DEPEND="${RDEPEND}"
-
-S="${WORKDIR}/${P/0.1/0}"
-
-src_install() {
-	make DESTDIR="${D}" install
-
-	dodoc AUTHORS BUGS ChangeLog NEWS README TODO
-}
